security: lock CORS to olabrows.store + rate limiting on AI/payment/subscribe